# Loser-HomeWork

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .markdownlint.jsonc  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  README.md  SUMMARY.md  go.mod  hugo.toml  package-lock.json  package.json  requirements.txt  test-md.md  test_pr.md  提交pr教程.md
.github/: 0001-Suppress-HTML-header-and-footer-for-CLI-highlight.patch  0002-Reduce-lang_not_found-message.patch  tl_packages  tree-sitter.json
.github/workflows/encodingcheck/: CMakeLists.txt  encodingcheck.cpp
.github/workflows/encodingcheck/cmake/: xdgmime.cmake
.github/workflows/encodingcheck/is_utf8/: .gitignore  CMakeLists.txt  LICENSE-APACHE  README.md
.github/workflows/encodingcheck/is_utf8/.github/workflows/: ubuntu22-sanitize.yml  ubuntu22.yml  vs17.yml
.github/workflows/encodingcheck/is_utf8/benchmarks/: CMakeLists.txt  bench.cpp
.github/workflows/encodingcheck/is_utf8/cmake/: add_cpp_test.cmake  import.cmake  is_utf8-config.cmake.in
.github/workflows/encodingcheck/is_utf8/src/: CMakeLists.txt  is_utf8.cpp
.github/workflows/encodingcheck/is_utf8/tests/: CMakeLists.txt  unit.cpp
.github/workflows/encodingcheck/xdgmime/: CMakeLists.txt  README  print-mime-data.c  test-mime-data.c  test-mime.c  xdgmimecache.c
.vitepress/: config.mjs
C++CoreGuidelines/: 第1章-简介.md  第2章-理念.md  第3章-接口.md  第4章-函数.md  第5章-类和类层次结构.md
C++CoreGuidelines解析/: README.md  第1章-简介.md  第2章-理念.md  第3章-接口.md  第4章-函数.md  第5章-类和类层次结构.md  第一章-简介.md  第二章-理念.md
archetypes/: default.md
check/: Cargo.toml
cmake/: FindBASH.cmake  FindLatexmk.cmake  FindPowerShell.cmake  LoserHomeWork.cmake  Slugify.cmake
src/PDF版题目与答案/: CMakeLists.txt  README.md  现代C++题目.tex  现代C++题目（答案与解析）.tex
src/PDF版题目与答案/resource/: question01.tex  question02.tex
src/PDF版题目与答案/tex/: question01.tex  question02.tex  question03.tex  question04.tex  question05.tex  question06.tex  question07.tex  question08.tex  question09.tex  question10.tex  question11.tex  question12.tex  question13.tex  question14.tex  question15.tex  question16.tex  questionAndAnswer01.tex  questionAndAnswer02.tex  questionAndAnswer03.tex  questionAndAnswer04.tex  questionAndAnswer05.tex  utility.tex
src/群友提交/: CMakeLists.txt  第九题xiaonewbee.cpp
src/群友提交/cmake/: CheckLoserHomeWork.cmake  Slugify.cmake
src/群友提交/script/: RunHomework.ps1  run_homework.sh
src/群友提交/第01题/: CPU眼里的指针.cpp  CodeyZ.cpp  README.md  Seedking.cpp  TPPPP.cpp  Wgtteol.cpp  brian.cpp  ezreal.cpp  freeisl.cpp  fywc.cpp  happyd0g.cpp  happyd0g.cpp.err  jacky.cpp  joe.cpp  love.cpp  mq卢瑟.cpp  mq日.cpp  mq松鼠.cpp  rhubarb1999.cpp  youmu_lew.cpp  zymelaii.cpp  嘻嘻.cpp  子魂.cpp  心洗.cpp  涼風青葉.cpp  金兔兔.cpp
src/群友提交/第02题/: CodeyZ.cpp  andyli.cpp  ezreal.cpp  happyd0g.cpp  joe.cpp  kurisu.cc  loser_linker.cpp  mq卢瑟.cxx  mq日.cpp  mq松鼠.cpp  墨水.cpp  子魂.cpp  心洗.cpp  涼風青葉.cpp  蓝弧.cpp
src/群友提交/第03题/: CodeyZ.cpp  SocialMean.cpp  Wgtteol.cpp  ezreal.cpp  happyd0g.cpp  jacky.cpp  joe.cpp  loser_linker.cpp  mq卢瑟.cxx  mq日.cpp  子魂.cpp  心洗.cpp  涼風青葉.cpp
src/群友提交/第04题/: CodeyZ.cpp  Wgtteol.cpp  brian.cpp  ezreal.cpp  happyd0g.cpp  jacky.cpp  joe.cpp  mq卢瑟.cxx  mq日.cpp  zymelaii.cpp  子魂.cpp  心洗.cpp  涼風青葉.cpp
src/群友提交/第05题/: TEST.ixx  Wgtteol.cpp  brian.cpp  ezreal.cpp  happyd0g.cpp  jacky.cpp  loser_linker.cpp  mq卢瑟.cxx  mq日.cpp  子魂.cpp  心洗.cpp  涼風青葉.cpp
src/群友提交/第06题/: Wgtteol.md  brian.md  loser_linker.md  mq卢瑟.md  涼風青葉.md
src/群友提交/第07题/: DarkSharpness.cpp  MrDotXin.cpp  TEST.ixx  Wgtteol.cpp  andyli.cpp  ezreal.cpp  happyd0g.cpp  jacky.cpp  kurisu.cc  loser_linker.cpp  mq卢瑟.cxx  mq日.cpp  saidfljwnzjasf.cpp  xy770.cpp  嘻嘻.cpp  子魂.cpp  涼風青葉.cpp  酸梅汤.cpp
src/群友提交/第08题/: FredBill.cpp  Junity.cpp  Lry722.cpp  MrDotXin.cpp  Ninter6.cpp  Wgtteol.cpp  ezreal.cpp  happyd0g.cpp  jacky.cpp  loser_linker.cpp  mickey_8.cpp  mq卢瑟.cxx  mq日.cpp  saidfljwnzjasf.cpp  shadow.cpp  初時雨.cpp  子魂.cpp  涼風青葉.cpp  酸梅汤.cpp
src/群友提交/第09题/: baiyi-jiang.md  loser_linker.md  mickey_9.cpp  mq卢瑟.md  mq松鼠.cpp  rhubarb1999.md  xiaonewbee.md  yuzhiy.md  涼風青葉.md
src/群友提交/第10题/: 494199.cpp  FredBill.cpp  Matrix-A-P1061.cpp  Matrix-A-reflect.cpp  Matrix-A.cpp  MrDotXin.cpp  TEST.ixx  Wgtteol.cpp  akchilov.cpp  akchilov2.cpp  akchilov2.md  akchilov3 第十题.cpp  akchilov3.cpp  akchilov3消灭一切打表式反射.cpp  andyli.cpp  ezreal.cpp  jacky.cpp  jacky.md  loser_linker.cpp  main_10.cpp  mifeng.cpp  mq卢瑟.cxx  mq日.cpp  mq松鼠.cpp  mq败.cpp  with_boost_pfr.md  wstring.cpp  yuzhiy.md  zymelaii.cpp  伊凡Gogh.cpp  子魂.cpp  涼風青葉.cpp  蓝弧.cpp  革匊习习中.cpp
src/群友提交/第11题/: Ninter6.cpp  baiyi-jiang.md  jacky.md  loser_linker.md  mickey_11.cpp  mq卢瑟.md  子魂.md  涼風青葉.md
src/群友提交/第12题/: Matrix-A.cpp  Ninter6.cpp  TEST.ixx  ezreal.cpp  jacky.cpp  loser_linker.cpp  mq卢瑟.cxx  mq松鼠.cpp  yuzhiy.cpp  子魂.cpp  涼風青葉.cpp  蓝弧.cpp
src/群友提交/第13题/: 494199.md  jacky.md  loser_linker.md  mq卢瑟.md  子魂.md  涼風青葉.md
src/群友提交/第14题/: CCat.cpp  F.v.S..cpp  Matrix-A-1.cpp  Matrix-A-2.cpp  Matrix-A-3.cpp  Matrix-A-4.cpp  Matrix-A.cpp  ezreal.cpp  jacky.cpp  mq卢瑟.cxx  mq日.cpp  mq松鼠.cpp  theUnknown123456789.cpp  涼風青葉.cpp  蓝弧.cpp
src/群友提交/第15题/: Matrix-A.cpp  akchilov.cpp  jacky.cpp  jacky2.cpp  mq卢瑟.cxx  mq日.cpp  output.txt  涼風青葉.cpp
src/群友提交/第16题/: akchilov.cpp  ezreal.cpp  jacky.cpp  mq卢瑟.cxx  mq松鼠.cpp  wxk2024.cpp  yuzhiy.cpp  涼風青葉.cpp
src/群友提交/第1题/: loser_linker.cpp
src/群友提交/第6题/: jacky.md
src/群友提交/第7题/: mq松鼠.cpp  saidfljwnzjasf.cpp  酸梅汤.cpp
src/群友提交/第8题/: andyli.cpp  yuzhiy.cpp  与天争锋.cpp
src/群友提交/第一题/: README.md  SocialMean.cpp  andyli.cpp  jacky.cpp  kkksc03.cpp  love.cpp
src/群友提交/第七题/: 27Onion.cc  DarkSharpness.cpp  FredBill.cpp  Ninter6.cc  PlanC.cpp  Wgtteol.cpp  mifeng.cpp
src/群友提交/第三题/: Wgtteol.cpp  joe.cpp  loser_linker.cpp
src/群友提交/第九题/: Wgtteol.cpp  jacky.md  mq松鼠.cpp  yuzhiy.md
src/群友提交/第二题/: SocialMean.cpp  Wgtteol.cpp  joe.cpp  loser_linker.cpp  mq松鼠.cpp
src/群友提交/第八题/: DarkSharpness.cpp  PlanC.cpp  Wgtteol.cpp  kurisu.cc  lekeshibai.cpp  mickey_8.cpp  mifeng.cpp  mq松鼠.cpp  rhubarb1999.cpp  yltx.cpp  蓝弧.cpp
src/群友提交/第六题/: loser_linker.md
src/群友提交/第四题/: loser_linker.cpp
(+111 files in other folders)
